--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,6 +88,12 @@
           </div>
         </div>
       </div>
+      <div class="interests" style="float: left;margin-top: 20px;" *ngIf="resumeData.domain && resumeData.domain.length>0">
+        <div class="section-title" [style]="'color:'+resumeData.theme">DOMAINS WORKED ON</div>
+        <div class="interests-div" *ngFor="let domain of resumeData.domain;let i=index;">
+          <div class="interest-div" [style]="'background-color:'+resumeData.theme" [ngClass]="{'mg-bt-20': i==resumeData.domain.length-1}">{{domain}}</div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
